fix: update banner text and adjust animation duration for improved visibility

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -89,11 +89,11 @@ body::before {
 /* Registrations Closed Banner */
 
 .banner::before {
-  content: "Happening Now!";
+  content: "Happening Now! Happening Now! Happening Now!";
 }
 
 .banner {
-  --ch: 33ch;
+  --ch: 40ch;
   --clr: white;
   width: 100%;
   height: 40px;
@@ -106,7 +106,7 @@ body::before {
   text-shadow: calc(var(--ch) * 0) 0 0.5px var(--clr),
     calc(var(--ch) * 1) 0 1px var(--clr), calc(var(--ch) * 2) 0 1px var(--clr),
     calc(var(--ch) * 3) 0 1px var(--clr), calc(var(--ch) * 4) 0 1px var(--clr);
-  animation: move 7s linear infinite;
+  animation: move 5s linear infinite;
   z-index: 50;
 }
 
